--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,15 +40,14 @@
         
     </head>
     <body>
-
-        
-        Username: <input type="text" name="username" id="username" /><br>
-
-        Password: <input type="password" id="password">
-        
+        <label>
+            Username: <input type="text" name="username" id="username" />
+        </label>
+        <br>
+        <label>
+            Password: <input type="password" id="password">
+        </label>
+        <br>
         <button id="loginBtn">Login!</button>
-        
-       
-        
     </body>
 </html>
