--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <head>
         <title> Admin Login Screen </title>
         
-        
+        <link rel="stylesheet" href="/styles.css" type="text/css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
         <script>
