--- a/views/updateAuthor.ejs
+++ b/views/updateAuthor.ejs
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title> </title>
+        <link rel="stylesheet" href="/styles.css" type="text/css" />
     </head>
     <body>
 
