--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -45,7 +45,7 @@
         
         <div class="author-container">
             <figure>
-                <img class="author-img" src="<%= author.portrait %>" />
+                <img class="author-img" src="<%= author.portrait %>" alt="Author Image"/>
                 <figcaption>
                     <a href="/updateAuthor?authorId=<%= author.authorId %>">
                         [UPDATE]
