--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -40,7 +40,7 @@
         </form>
         
         <h3>Authors</h3>
-        
+        <div class="container">
         <% authorList.forEach(function(author){  %>
         
         <div class="author-container">
@@ -61,6 +61,7 @@
         </div>
         
         <% }) %>
+        </div>
         
     </body>
 </html>
